@@ -1,44 +1,0 @@
-[Desktop Entry]
-Name=Spectrum Analyzer Data Engine
-Name[ca]=Motor de dades d'analitzador d'espectre
-Name[ca@valencia]=Motor de dades d'analitzador d'espectre
-Name[cs]=Datový nástroj spektrálního analyzátoru
-Name[da]=Datamotor til spektrumanalysator
-Name[de]=Datenmodul zur Bandbreitenanalyse
-Name[el]=Μηχανή δεδομένων αναλυτή φάσματος
-Name[es]=Motor de datos dl analizador de espectro
-Name[et]=Spektsianalüüsija andmemootor
-Name[eu]=Espektro-analizatzaileko datuen motorra
-Name[fr]=Moteur de données pour l'analyseur de spectres
-Name[ga]=Inneall Sonraí: Anailíseoir Speictrim
-Name[hu]=Spektrumanalizáló adatmodul
-Name[it]=Motore dati analizzatore di spettro
-Name[ja]=スペクトル分析データエンジン
-Name[km]=ម៉ាស៊ីន​ទិន្នន័យ​នៃ​កម្មវិធី​វិផាគ​វិសាលគម
-Name[lt]=Spektro analizatorius duomenų variklis
-Name[lv]=Spektra analizatora datu dzinējs
-Name[nb]=Datamotor for spektrumanalysator
-Name[nl]=Gegevensengine van spectrumanalyser
-Name[pl]=Silnik danych analizatora spektrum
-Name[pt]=Motor de Dados do Analisador de Espectro
-Name[pt_BR]=Mecanismo de dados do Analisador de Espectro
-Name[ru]=Источник данных для спектрального анализатора
-Name[sk]=Dátový engine spektrálneho analyzátora
-Name[sl]=Podatkovni pogon za preučevalnik spektra
-Name[sr]=Датомотор анализатора спектра
-Name[sr@ijekavian]=Датомотор анализатора спектра
-Name[sr@ijekavianlatin]=Datomotor analizatora spektra
-Name[sr@latin]=Datomotor analizatora spektra
-Name[sv]=Datagränssnitt för spektrumanalysator
-Name[tr]=Tayf Analizcisi Veri Motoru
-Name[uk]=Рушій даних аналізатора спектра
-Name[x-test]=xxSpectrum Analyzer Data Enginexx
-Name[zh_TW]=光譜分析器資料引擎
-
-X-KDE-ServiceTypes=Plasma/DataEngine
-Type=Service
-Icon=amarok
-X-KDE-Library=amarok_data_engine_spectrum_analyzer
-X-KDE-PluginInfo-Name=amarok-spectrum-analyzer
-X-KDE-ParentApp=Amarok
-
